# praxis-shop-v2

./: Cargo.toml  build.rs  index.html  schema.graphql
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: mod.rs
src/components/goal/: form.module.css  form.rs  item.module.css  item.rs  list.module.css  list.rs
src/components/navigation/: mod.rs  navigation.module.css  navigation.rs
src/components/progress/: mod.rs  progress_bar.module.css  progress_bar.rs
src/components/task/: form.module.css  form.rs  item.module.css  item.rs  list.module.css  list.rs  mod.rs
src/graphql/: client.rs  mod.rs  schema.rs  subscriptions.rs
src/graphql/mutations/: goals.rs  tasks.rs
src/graphql/queries/: goals.rs  mod.rs  tasks.rs
src/pages/: mod.rs
src/pages/goals/: goals.module.css  goals.rs  mod.rs
src/pages/home/: home.module.css  home.rs
src/pages/tasks/: dashboard.module.css  dashboard.rs  tasks.module.css  tasks.rs
src/services/: graphql_service.rs  mod.rs  service_context.rs
src/state/: mod.rs  use_goals.rs  use_tasks.rs
